--- a/CuponWebSite/CuponWebSite/view/BussinessOwner.html
+++ b/CuponWebSite/CuponWebSite/view/BussinessOwner.html
@@ -137,6 +137,7 @@
                     <a href="#" class="list-group-item" onclick="GetCupons();">My Cupons</a>
                     <a href="#" class="list-group-item" onclick="GetCupons(1);">History</a>
                     <a href="#" class="list-group-item" onclick="GetCupons(2);">Settings</a>
+                    <a href="#" class="list-group-item" onclick="$('#AddCuponModal').modal('show');">Add New Cupon</a>
                 </div>
                 <hr>				
             </div>
@@ -186,12 +187,72 @@
             </div>
         </div>
     </div>
-    
+        <div class="modal fade" id="AddCuponModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Create New Cupon</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <section class="container">
+                            <div class="container-page">				
+                                <div class="col-md-6">
+                                    <h3 class="dark-grey">Registration</h3>
+				
+                                    <div class="form-group col-lg-12">
+                                        <label>Cupon Name</label>
+                                        <input type="" name="" class="form-control" id="NewCuponName" value="">
+                                    </div>
+				
+                                    <div class="form-group col-lg-12">
+                                        <label>Description</label>
+                                        <input type="text" name="" class="form-control" id="NewCuponDescription" value="">
+                                    </div>
+				
+                                    <div class="form-group col-lg-6">
+                                        <label>Original Price</label>
+                                        <input type="number" name="" class="form-control" id="NewCuponOriginalPrice" value="">
+                                    </div>
+								
+                                    <div class="form-group col-lg-6">
+                                        <label>Cupon Price</label>
+                                        <input type="number" name="" class="form-control" id="NewCuponPrice" value="">
+                                    </div>
+				
+                                    <div class="form-group col-lg-6">
+                                        <label>Select Category</label>
+                                        <select id="NewCuponCategory">
+                                            <option value="0">Restaurants</option>
+                                            <option value="1">Shopping</option>
+                                            <option value="2">Health Care</option>
+                                            <option value="3">Office & Electronics</option>
+                                            <option value="4">Vacations</option>
+                                            <option value="5">Pleasure</option>
+                                        </select>
+                                    </div>			
+				                    <div class="form-group col-lg-6">
+                                        <label>Expiration Date</label>
+                                        <input type="date" id="NewCuponDate"/>
+				                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" id="PurchaseButton" class="btn btn-primary" onclick="AddCupon()">Add Cupon</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
+    <script src="js/bussiness.js"></script>
  
 </body>
 
