--- a/CuponWebSite/CuponWebSite/view/BussinessOwner.html
+++ b/CuponWebSite/CuponWebSite/view/BussinessOwner.html
@@ -246,6 +246,21 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="GeneralModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="generalModalTitle">Modal</h4>
+                </div>
+                <div class="modal-body" id="generalModalBody">
+                </div>
+                <div class="modal-footer" id="generalModalFooter">
+                    <button type="button" class="btn btn-default" id="generalModalCloseButton" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
 
     <!-- Bootstrap Core JavaScript -->
