--- a/CuponWebSite/CuponWebSite/view/BussinessOwner.html
+++ b/CuponWebSite/CuponWebSite/view/BussinessOwner.html
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="list-group">
-                    <a href="#" class="list-group-item" onclick="GetBussiness();ShowBussiness();">My Bussinesses</a>
+                    <a href="#" class="list-group-item" onclick="GetBussiness()">My Bussinesses</a>
                     <a href="#" class="list-group-item" onclick="GetCuponsForOwner()">All Cupons</a>
                     <a href="#" class="list-group-item" onclick="">Settings</a>
                     <a href="#" class="list-group-item" onclick="$('#AddCuponModal').modal('show');">Add New Cupon</a>
