--- a/CuponWebSite/CuponWebSite/view/index.html
+++ b/CuponWebSite/CuponWebSite/view/index.html
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                         <!--/.media -->
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p>28 years old, Kibutznik, and loves to program. In his spare time loves to cook, bake and watch TV. Ido is one of the founding member of the Application.</p>
                     </div>
                 </div>
                 <!--/.col-lg-4 -->
@@ -380,7 +380,7 @@
                             </div>
                         </div>
                         <!--/.media -->
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p>25 years old. Loves cats, music and reading. Noa is one of the founding members of the Applicaation.</p>
                     </div>
                 </div>
                 <!--/.col-lg-4 -->
@@ -421,12 +421,7 @@
                             <div class="media-body">
                                 <h4>Saar Tal</h4>
                                 <h5>Founder and CEO</h5>
-                                <ul class="tag clearfix">
-                                    <li class="btn"><a href="#">Web</a></li>
-                                    <li class="btn"><a href="#">Ui</a></li>
-                                    <li class="btn"><a href="#">Ux</a></li>
-                                    <li class="btn"><a href="#">Photoshop</a></li>
-                                </ul>
+
                                 <ul class="social_icons">
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -435,7 +430,7 @@
                             </div>
                         </div>
                         <!--/.media -->
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p>26 years old. Loves music, watching TV and going to the beach. Saar is one of the founding member if the Application. </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-md-offset-2">
