--- a/CuponWebSite/CuponWebSite/view/BussinessOwner.html
+++ b/CuponWebSite/CuponWebSite/view/BussinessOwner.html
@@ -75,7 +75,7 @@
                     </li>
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right" id="head_account" hidden>
+                <ul class="nav navbar-nav navbar-right" id="head_account">
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Account
                                              <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -112,12 +112,6 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right" id="head_login">
-                    <li>
-                        <a href="#" onclick="SetView('login');">Sign Up / Login</a>
-                    </li>
-                </ul>
-
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -130,7 +124,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="text-center">
-                    <img src="//placehold.it/100" class="avatar img-circle" alt="avatar"><br />
+                    <img id="ownerImg" height="100" width="100" class="img-circle" alt="avatar"><br />
                     <span id="Span1">Bussiness</span>
                 </div>
 
@@ -138,7 +132,8 @@
                     <a href="#" class="list-group-item" onclick="GetBussiness();ShowBussiness();">My Bussinesses</a>
                     <a href="#" class="list-group-item" onclick="GetCuponsForOwner()">All Cupons</a>
                     <a href="#" class="list-group-item" onclick="">Settings</a>
-                    <a href="#" class="list-group-item" onclick="$('#AddCuponModal').modal('show');">Add New Cupon</a>
+                    <a href="#" class="list-group-item" onclick="navigator.geolocation.getCurrentPosition(showPosition);">Add New Bussiness</a>
+                    <!--<a href="#" class="list-group-item" onclick="$('#AddCuponModal').modal('show');">Add New Cupon</a>-->
                 </div>
             </div>
 
@@ -246,6 +241,59 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="AddBussinessModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Create New Bussiness</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Bussiness Name</label>
+                                        <input type="text" name="" class="form-control" id="NewBussinessName" value="">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label>Description</label>
+                                        <input type="text" name="" class="form-control" id="NewBussinessDescription" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Select Category</label>
+                                        <select id="NewBussinessCategory">
+                                            <option value="0">Restaurants</option>
+                                            <option value="1">Shopping</option>
+                                            <option value="2">Health Care</option>
+                                            <option value="3">Office & Electronics</option>
+                                            <option value="4">Vacations</option>
+                                            <option value="5">Pleasure</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="location">Location</label>
+                                        <input class="form-control" type="text" id="location" />
+                                        <input type="hidden" id="NewBussinessLongitude"/>
+                                        <input type="hidden" id="NewBussinessLatitude"/>
+                                    </div>
+
+                                    <div id="mapCanvas" class="text-center"></div>
+
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" id="Button1" class="btn btn-primary" onclick="AddBussiness()">Send Bussiness Request</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="modal fade" id="GeneralModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -259,6 +307,7 @@
                     <button type="button" class="btn btn-default" id="generalModalCloseButton" data-dismiss="modal">Close</button>
                 </div>
             </div>
+            <input type="hidden" id="bussinessIdHidden"/>
         </div>
     </div>
     <!-- jQuery -->
