--- a/CuponWebSite/CuponWebSite/view/Home.html
+++ b/CuponWebSite/CuponWebSite/view/Home.html
@@ -102,7 +102,10 @@
                                         Not a memeber yet? <a onclick="SetView('signupbox');">Click Here</a>
                                     </div>
                                 </div>
-
+                                <hr/>
+                                <div>
+                                    Enter as bussiness owner <a onclick="SetView('bLogin')">Here</a>
+                                </div>
 
 
                             </form>
@@ -186,7 +189,115 @@
                                 <div class="form-group">
                                     <!-- Button -->
                                     <div class="col-md-offset-3 col-md-9">
-                                        <button id="btn-signup" type="button" class="btn btn-info" onclick="register();"><i class="icon-hand-right"></i>&nbsp Sign Up</button>
+                                        <button id="btn-signup" type="button" class="btn btn-info" onclick="getLocation();"><i class="icon-hand-right"></i>&nbsp Sign Up</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+    </section>
+    <section id="BussinessOwner" class="background-image" hidden>
+        <div class="container">
+
+            <div class="row ">
+                <div class="col-md-3">
+                </div>
+                <div id="bLogin" style="margin-top: 50px;" class="mainbox col-md-6">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="panel-title">Sign In</div>
+                            <div style="float: right; font-size: 80%; position: relative; top: -10px"><a href="#">Forgot password?</a></div>
+                        </div>
+
+                        <div style="padding-top: 30px" class="panel-body">
+
+                            <div style="display: none" id="Div3" class="alert alert-danger col-sm-12"></div>
+
+                            <form id="Form1" class="form-horizontal" role="form">
+
+                                <div style="margin-bottom: 25px" class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                    <input id="bUsername" type="text" class="form-control" name="username" value="" placeholder="username or email">
+                                </div>
+
+                                <div style="margin-bottom: 25px" class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                    <input id="bPassword" type="password" class="form-control" name="password" placeholder="password">
+                                </div>
+                                <div class="input-group">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input id="bRemember" type="checkbox" name="remember" value="1">
+                                            Remember me
+                                        </label>
+                                    </div>
+                                </div>
+
+
+                                <div style="margin-top: 10px" class="form-group">
+                                    <!-- Button -->
+
+                                    <div class="col-sm-12 controls">
+                                        <a id="bButton" href="#" class="btn btn-success" onclick="loginBO()">Login  </a>
+                                        <hr />
+                                        Not a registerd bussiness owner yet? <a onclick="SetView('bRegister');">Click Here</a>
+                                    </div>
+                                </div>
+                            </form>
+
+
+
+                        </div>
+                    </div>
+                </div>
+                <div id="bRegister" style="margin-top: 50px" class="mainbox col-md-6" hidden>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="panel-title">Sign Up</div>
+                        </div>
+                        <div class="panel-body">
+                            <form id="Form2" class="form-horizontal" role="form">
+                                <div id="Div5" style="display: none" class="alert alert-danger">
+                                    <p>Error:</p>
+                                    <span></span>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email" class="col-md-3 control-label">Username</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control" id="Text2" placeholder="Username">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="col-md-3 control-label">Password</label>
+                                    <div class="col-md-9">
+                                        <input type="password" class="form-control" id="password2" placeholder="Password">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="col-md-3 control-label">Confirm Password</label>
+                                    <div class="col-md-9">
+                                        <input type="password" class="form-control" id="Password3" placeholder="Password" />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email" class="col-md-3 control-label">Email</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control" id="Text5" placeholder="Email Address" />
+                                    </div>
+                                </div>
+                                
+
+                                <div class="form-group">
+                                    <!-- Button -->
+                                    <div class="col-md-offset-3 col-md-9">
+                                        <button id="Button1" type="button" class="btn btn-info" onclick="registerBO();"><i class="icon-hand-right"></i>&nbsp Sign Up</button>
                                     </div>
                                 </div>
                             </form>
