--- a/CuponWebSite/CuponWebSite/view/Home.html
+++ b/CuponWebSite/CuponWebSite/view/Home.html
@@ -48,6 +48,44 @@
                         <a href="#" onclick="SetView('Contact');">Contact</a>
                     </li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">System Admin
+                                             <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <div class="navbar-content">
+                                    <div class="row">
+                                        <div class="col-md-5">
+                                            Username:
+                                        </div>
+                                        <div class="col-md-7">
+                                            <input type="text"/>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-5">
+                                            Password:
+                                        </div>
+                                        <div class="col-md-7">
+                                            <input type="password"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="navbar-footer">
+                                    <div class="navbar-footer-content">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <a href="#" class="btn btn-default btn-sm pull-right" onclick="SignInAdmin()">Sign In</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
