--- a/CuponWebSite/CuponWebSite/view/css/main.css
+++ b/CuponWebSite/CuponWebSite/view/css/main.css
@@ -411,3 +411,10 @@ ul.social_icons li  a i{
   border-color: transparent transparent #DDD transparent;
   z-index: 0;
 }
+
+.used {
+    border: 1px solid red;
+}
+.pending {
+    border: 1px solid green;
+}
