--- a/CuponWebSite/CuponWebSite/view/SysAdmin.html
+++ b/CuponWebSite/CuponWebSite/view/SysAdmin.html
@@ -169,7 +169,7 @@
                                             <i class="fa fa-comments fa-5x"></i>
                                         </div>
                                         <div class="col-xs-9 text-right">
-                                            <div class="huge" id="NumOfUnapproved">26</div>
+                                            <div class="huge" id="NumOfUnapproved">0</div>
                                             <div>Cupons Waiting For Approval!</div>
                                         </div>
                                     </div>
@@ -191,7 +191,7 @@
                                             <i class="fa fa-tasks fa-5x"></i>
                                         </div>
                                         <div class="col-xs-9 text-right">
-                                            <div class="huge" id="numOfUnapprovedBussinesses">12</div>
+                                            <div class="huge" id="numOfUnapprovedBussinesses">0</div>
                                             <div>Bussiness Requests!</div>
                                         </div>
                                     </div>
@@ -213,8 +213,8 @@
                                             <i class="fa fa-shopping-cart fa-5x"></i>
                                         </div>
                                         <div class="col-xs-9 text-right">
-                                            <div class="huge">124</div>
-                                            <div>New Purchases!</div>
+                                            <div class="huge" id="numOfSocialCupons">0</div>
+                                            <div>New Social Network Cupons</div>
                                         </div>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                             <i class="fa fa-support fa-5x"></i>
                                         </div>
                                         <div class="col-xs-9 text-right">
-                                            <div class="huge">13</div>
+                                            <div class="huge">0</div>
                                             <div>New Users!</div>
                                         </div>
                                     </div>
