Beggining Of Work 3

--- a/CuponWebSite/CuponWebSite/view/index.html
+++ b/CuponWebSite/CuponWebSite/view/index.html
@@ -220,7 +220,7 @@
                 </div>
                 <div id="mapCanvas" class="text-center"></div>
             </div>
-            <button type="submit" class="btn btn-primary" onclick="Search()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+            <button type="submit" class="btn btn-primary" onclick="SearchByLocation()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
         </form>
     </div>
     <!-- /search -->
